# fsd_builder

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  trunk.toml
src/: app.rs  lib.rs  main.rs  shared_messages.rs
src/components/: left_bar.rs  main_canvas.rs  right_bar.rs  top_menu.rs
src/models/: armylist.rs  character.rs  element.rs  mod.rs  roster.rs  support.rs  unit.rs
static/: index.html
static/js/: download_file.js
static/styles/: app.css  areas.css  buttons.css  left_bar.css  main_canvas.css  right_bar.css  top_menu.css
