[package]
name = "fsd_builder"
version = "0.1.0"
edition = "2021"

authors = ["Giacomo Pantalone <giacomo.pantalone@gmail.com>"]
license = "MIT"

# Add a description for your project
description = "An Army Builder for Full Spectrum Dominance."

# Repository link
repository = "https://github.com/thelazyone/fsd_builder"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.78"

# Add other dependencies as needed

[dependencies.web-sys]
version = "0.3.55"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true