[package]
name = "fsd_builder"
version = "0.1.0"
edition = "2021"
authors = ["Giacomo Pantalone <giacomo.pantalone@gmail.com>"]
license = "MIT"
description = "An Army Builder for Full Spectrum Dominance."
repository = "https://github.com/thelazyone/fsd_builder"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2.78"
wasm-logger = "0.1.0"
log = "0.4.14"
image = "0.23.14"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.55"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "FileReader",
    "Blob",
]

# [profile.release]
# lto = true